[package]
name = "NeoRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.3.0"
serde_derive = "1.0.188"
tokio = { version = "1.0", features = ["full"] }
# For base64 encoding
base64 = "0.21.4"
bs58 = "0.4.0"
aes = "0.8.3"
block-modes = "0.9.1"
# For hash function
sha3 = "0.10.8"
async-trait = { version = "0.1.73", features = [] }
# For hex encoding/decoding
hex = { version = "0.4", features = [] }
thiserror = { version = "1.0.28", features = [] }
# For JSON manipulation
json = "0.12"
hex-literal = "0.4.1"
# Neo Rust SDK
#neo = "0.9"
rust_decimal = "1.0"
# JSON serialization

# Cryptography
sha2 = "0.10"
ripemd = "0.1.3"

# Data structures
bitvec = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Utilities
#bitcoin = { version = "0.30.1", features = ["serde"] }

#elliptic-curve = "0.13.5"
p256 = "0.11.1"

# Big integer math
num-bigint = "0.4"

futures = "0.3.28"

# Byte array utils
byte-slice-cast = "1.2"

primitive-types = "0.11.1"

# Serialization
bincode = "1.3"

rand= "0.8.5"

rust-crypto = "0.2"

lazy_static = "1.4.0"
num-traits = "0.2.16"
chrono = "0.4.31"

strum = "0.25.0"
strum_macros = "0.25.2"
num_enum = { version = "0.7.0", features = [] }
derive_more = "0.99.17"
rayon = "1.7.0"
indexmap = "2.0.0"
getset = "0.1.2"
educe = "0.4.23"
byteorder = "1.4.3"
serde-big-array       = "0.5.1"
blake2                = { version = "0.10.6", default-features=false }
tiny-keccak           = { version = "2.0", features = ["keccak"] }
rustc-serialize = "0.3.24"
serde_bytes = "0.11.12"
# Utilities
#scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
#codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive", "max-encoded-len"] }
#log = { version = "0.4.17", default-features = false }
#sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
#sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
#sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
#sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
#sp-session = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
#sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
#sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
#sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
#sp-version = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

[features]
default = [ "std" ]
std = [
#    "codec/std",
#    "log/std",
#    "scale-info/std",
#    "sp-core/std",
#    "sp-io/std",
#    "sp-runtime/std",
#    "sp-std/std",
]