[package]
name = "neo-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

strum = {workspace = true}
strum_macros = {workspace = true}
lazy_static.workspace = true
hex = { version = "0.4.3", features = [] }
p256.workspace = true
num-traits = "0.2.16"
num-bigint = "0.4.4"
tokio = "1.32.0"
rustc-serialize = "0.3.24"
serde_derive = { version = "1.0.188", features = [] }
serde = { version = "1.0.188", features = ["derive"] }
derive_more = "0.99.17"
neo-types.workspace = true
primitive-types.workspace = true
getset.workspace = true
neo-codec.workspace = true
serde_json = "1.0.107"
thiserror = "1.0.49"
neo-crypto.workspace = true