[package]
name = "neo-codec"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.188"
num-bigint = "0.4.4"
derive_more = "0.99.17"
p256= "0.13.2"
getset.workspace = true
thiserror = "1.0.49"
bincode = "1.3.3"
serde = { version = "1.0.188", features = ["derive"] }
primitive-types.workspace = true