[package]
name = "neo-crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
bs58= "0.5.0"
p256= "0.13.2"
derive_more = "0.99.17"
aes = "0.8.3"
rust-crypto.workspace = true
serde_derive =  "1.0.188"
getset = "0.1.2"
thiserror = "1.0.49"
hex = "0.4.3"
rand ="0.8.5"
rustc-serialize= "0.3.24"
primitive-types.workspace = true
serde = "1.0.188"
generic-array = "1.0.0"
open-fastrlp = { version = "0.1.4", features = ["std", "derive", "ethereum-types"] }
rlp = { version = "0.5", features = ["derive"] }
bytes = "1.5.0"
typenum = { version = "1.14", features = [] }
signature = { version = "2.1.0", features = [] }
rand_core = "0.6.4"
#enr = { version = "0.10.0", default-features = false, features = ["k256", "serde"] }