[package]
name = "neo-middleware"
authors = ["R3E Network <jimmy@r3e.network>"]
readme = "README.md"
description = "Middleware implementations for the neo-rs crate"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[dependencies]
neo-contract = { workspace = true, features = ["abigen", "providers"] }
neo-providers.workspace = true
neo-signers.workspace = true
neo-types.workspace = true
neo-crypto.workspace = true

async-trait.workspace = true
auto_impl.workspace = true
serde.workspace = true
thiserror.workspace = true
futures-util.workspace = true
futures-locks.workspace = true
futures-channel.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
instant.workspace = true
primitive-types.workspace = true

# for gas oracles
reqwest.workspace = true
url.workspace = true

serde_json.workspace = true
rustc-serialize = "0.3.24"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true

[dev-dependencies]
neo-providers = { workspace = true, features = ["ws", "rustls"] }

hex.workspace = true
rand.workspace = true
once_cell.workspace = true
reqwest = { workspace = true, features = ["json", "rustls"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
openssl = ["reqwest/native-tls"]
