[package]
name = "neo-signers"
authors = ["R3E Network <jimmy@r3e.network>"]
readme = "README.md"
description = "A unified interface for locally signing neo transactions"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[dependencies]

# crypto
coins-bip32 = "0.8.3"
coins-bip39 = "0.8.6"
elliptic-curve.workspace = true
sha2.workspace = true
rand.workspace = true
getset.workspace = true
# misc
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
hex.workspace = true
neo-types.workspace=true
neo-crypto.workspace=true
neo-builder.workspace=true
neo-config.workspace=true
bs58.workspace=true

# futures
futures-util = { workspace = true, optional = true }
futures-executor = { workspace = true, optional = true }

p256 = {workspace = true}

# aws
rusoto_core = { version = "0.48.0", default-features = false, optional = true }
rusoto_kms = { version = "0.48.0", default-features = false, optional = true }
spki = { workspace = true, optional = true }
tokio = "1.32.0"
serde_derive = "1.0.188"

primitive-types.workspace = true
serde = "1.0.188"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eth-keystore = "0.5.0"
home = { workspace = true, optional = true }

# ledger
coins-ledger = { version = "0.8.3", default-features = false, optional = true }
semver = { workspace = true, optional = true }

protobuf = { version = "=3.2.0", optional = true }

# yubi
yubihsm = { version = "0.42", features = ["mockhsm", "http", "usb"], optional = true }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
yubihsm = { version = "0.42", features = ["http", "usb", "mockhsm"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
futures = ["futures-util", "futures-executor"]
ledger = ["coins-ledger", "futures", "semver"]
#trezor = ["trezor-client", "futures", "semver", "home", "protobuf"]
trezor=[]
aws = ["rusoto_core/rustls", "rusoto_kms/rustls", "spki"]
yubi = ["yubihsm"]
