[package]
name = "neo"
authors = ["R3E Network <contact@r3e.network>"]
readme = "../README.md"
description = "A complete neo Rust library"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[features]
default = [ "rustls"]

# workspace-wide features
legacy = [ "neo-contract/legacy"]

rustls = [
    "neo-contract/rustls",
    "neo-middleware/rustls",
    "neo-providers/rustls",
]
openssl = [
    "neo-contract/openssl",
    "neo-middleware/openssl",
    "neo-providers/openssl",
]

# neo-providers
ws = ["neo-providers/ws"]
legacy-ws = ["neo-providers/legacy-ws"]
ipc = ["neo-providers/ipc"]
dev-rpc = ["neo-providers/dev-rpc"]

# neo-signers
aws = ["neo-signers/aws"]
ledger = ["neo-signers/ledger"]
trezor = ["neo-signers/trezor"]
yubi = ["neo-signers/yubi"]


[dependencies]
neo-addressbook.workspace = true
#neo-contract = { workspace = true, features = ["providers"] }
neo-codec.workspace=true
neo-crypto.workspace=true
neo-config.workspace=true
neo-types.workspace=true
neo-middleware.workspace = true
neo-providers.workspace = true
neo-signers.workspace = true
neo-contract.workspace = true
thiserror = "1.0.49"
