[package]
name = "examples-geth"
version = "0.0.0"
publish = false
authors = ["R3E Network <contact@r3e.network>"]

license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dev-dependencies]
neo.workspace = true

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

serde.workspace = true
serde_json.workspace = true

eyre.workspace = true
tempfile.workspace = true
