[package]
name = "examples-providers"
version = "0.0.0"
publish = false
authors = ["R3E Network <contact@r3e.network>"]

license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dev-dependencies]
neo = { workspace = true, features = ["abigen", "ipc", "rustls", "ws"] }

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait.workspace = true
reqwest.workspace = true
url.workspace = true

serde.workspace = true
serde_json.workspace = true

thiserror.workspace = true
eyre.workspace = true
