[package]
name = "examples-wallets"
version = "0.0.0"
publish = false
authors = ["R3E Network <contact@r3e.network>"]

license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dev-dependencies]
neo = { workspace = true, features = ["abigen", "ws", "rustls", "ledger", "trezor", "yubi"] }

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

serde.workspace = true
serde_json.workspace = true

eyre.workspace = true
